backend/demo/src/main/java/com/example/demo/error/DuplicateIdException.java
package com.example.demo.error;


public class DuplicateIdException extends RuntimeException {

	public DuplicateIdException(String message) {
		super(message);
	}
}
